# Post-Analysis-VPIC

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  README  README.md  distclean.cmake  module_cray.sh  module_gcc.sh  module_intel.sh  run_code.sh
config_files/: README.md  bbf.conf  bulk_internal.sh  combine_spectrum.sh  combine_spectrum_h5.sh  cori_combin_spectrum.sh  cori_energization.sh  cori_energization_bb.sh  cori_temp_anisotropy.sh  cori_translate.sh  dissipation_s.sh  dist.info  edison.slurm  energetic_density.sh  energization.sh  energization25.sh  energization_cori.sh  energization_h5.sh  free_persistent.sh  init_persistent.sh  kappa_dist.sh  module_intel_lanl.sh  parspec.sh  reduce_organized_spectrum_h5.sh  reduce_spectrum_h5.sh  reorganize_spectrum_h5.sh  spectrum_reconnection_layer.sh  temp_anisotropy.sh  temp_anisotropy_cori.sh  vdot_kappa.sh
doc/: index.html
doc/lists/: files.html  modules.html  procedures.html  programs.html  types.html
doc/module/: analysis_management.html  commandline_arguments.html  compression_shear.html  configuration_translate.html  current_densities.html  electric_field.html  emfields.html  fieldline_tracing.html  file_header.html  inductive_electric_field.html  interpolation_emf.html  jdote_energy_band.html  jdote_module.html  kinds.html  magnetic_field.html  mpi_datatype_fields.html  mpi_io_fields.html  mpi_io_translate.html  mpi_topology.html  neighbors_module.html  para_perp_pressure.html  parallel_hdf5.html  parameters.html  particle_drift.html  particle_energy_spectrum.html  particle_fieldline.html  particle_fields.html  particle_file.html  particle_frames.html  particle_info.html  particle_maximum_energy.html  particle_module.html  particle_spectrum_vdist_module.html  path_info.html  picinfo.html  pressure_tensor.html  previous_post_density.html  previous_post_velocities.html  rank_index_mapping.html  read_config.html  (+6 more)
doc/proc/: adjust_particle_fields.html  adjust_tindex_start.html  analysis_single_frame.html  broadcast_pic_info.html  calc_absj.html  calc_b_norm.html  calc_compression_shear.html  calc_current_densities.html  calc_current_density.html  calc_curvature.html  calc_curvature_drift_velocity.html  calc_div_ptensor.html  calc_div_v.html  calc_div_vdot_ptensor.html  calc_emfields_derivatives.html  calc_energy_bins.html  calc_energy_conversion.html  calc_energy_interval.html  calc_energy_interval~2.html  calc_energy_spectra.html  calc_energy_spectrum_single.html  calc_grad_pscalar.html  calc_gradient_b.html  calc_gradient_drift_velocity.html  calc_gyrofrequency.html  calc_inductive_e.html  calc_interp_param.html  calc_interp_weights.html  calc_jdote.html  calc_para_perp_pressure.html  calc_para_perp_velocity.html  calc_para_perp_velocity_3d.html  calc_particle_energy.html  calc_particle_energy_change_rate.html  calc_particle_energy_spectrum.html  (+255 more)
idl/: piccurrent.pro
particle_tracer/: Makefile  binary_to_hdf5.c  module.sh
python/: AGU_2018.ipynb  _colormap_data.py  agu16_plots.py  alpha_dist.ipynb  analysis_jdote.py  apj_plots.py  apj_trajectories.py  apjl_plots.py  bulk_internal_energy.py  charge_neutrality.py  color_maps.py  combine_energy_spectrum.py  compression.py  contour_plots.py  contour_plots_3d.py  cori_3d.ipynb  cori_3d.py  cori_3d_acc.py  cori_3d_fft.py  cori_3d_fields.py  cori_3d_spect.py  cori_3d_tracer.py  cori_multi_cs_spect.py  cori_sigma.py  cori_sigma_fft.py  cori_sigma_spect.py  derived_fields.py  distinguishable_colors.py  double_layer.ipynb  dpp_poster_plots.py  electric_field.py  energization.py  energy_conversion.py  exb_vel.py  fast_kde.py  field_data_2d.py  field_line_plot.py  field_movie.py  fields_movie.py  fields_plot.py  (+56 more)
src/modules/: CMakeLists.txt  adjoint_points.f90  analysis_config.f90  commandline_arguments.f90  compression.f90  compression_shear.f90  current_densities.f90  electric_field.f90  emf_derivatives.f90  emfields.f90  energy_band.f90  exb_drift.f90  fieldline_tracing.f90  file_header.f90  fluid_energization_module.f90  get_info.f90  get_info_translate.f90  global.f90  hdf5_io.f90  hydro_derivatives.f90  inductive_efield.f90  interpolation_comp_shear.f90  interpolation_current_density.f90  interpolation_emf.f90  interpolation_funs.f90  interpolation_gradu.f90  interpolation_particle_fields.f90  interpolation_pre_post_bfield.f90  interpolation_pre_post_efield.f90  interpolation_pre_post_ufield.f90  interpolation_pre_post_vexb.f90  interpolation_pre_post_vfield.f90  interpolation_vel_mom.f90  interpolation_vexb.f90  interpolation_vperp_derivatives.f90  jdote_module.f90  magnetic_field.f90  maximum_energy.f90  mpi_io.f90  mpi_io_dissipation.f90  (+31 more)
src/programs/: CMakeLists.txt  bulk_flow_energy.f90  bulk_internal_energy.f90  calc_agyrotropy.f90  calc_vexb.f90  cla_test.f90  combine_spectrum_binary.f90  combine_spectrum_hdf5.f90  compression.f90  dissipation.f90  energetic_particle_density.f90  fluid_energization.f90  kappa_dist.f90  parallel_hdf5.f90  parallel_potential.f90  parspec.f90  parspec_cpu_based.f90  particle_based_jdote.f90  particle_energization.f90  particle_energization_io.f90  particle_number_eband.f90  particle_spectrum_box.f90  particle_spectrum_vdist_box.f90  particle_spectrum_vdist_fieldlines.f90  ptl_tracer_hdf5.f90  reduce_organized_spectrum_hdf5.f90  reduce_spectrum_hdf5.f90  reorganize_spectrum_hdf5.f90  spectrum_along_fieldline.f90  spectrum_reconnection_layer.f90  temperature_anisotropy.f90  translate.f90  vdist_1d_along_fieldline.f90  vdist_2d_along_fieldline.f90  vdistribution.f90  vdot_kappa.f90
vpic-sorter/: Makefile  README  binary_hdf5.sh  binary_to_hdf5.c  configuration.c  configuration.h  constants.h  dset_name_item.h  ene_emf.sh  ene_emf_vel.sh  energy_sorter.sh  get_data.c  get_data.h  global.h  h5group-sorter.c  meta_data.c  meta_data.h  module.sh  mpi_io.c  mpi_io.h  package_data.c  package_data.h  particle_tags.c  particle_tags.h  particle_trajectory.c  qsort-parallel.c  qsort-parallel.h  sorter.sh  time_frame_info.c  time_frame_info.h  time_steps.sh  tracked_particle.c  tracked_particle.h  trajectory.sh  vpic_data.c  vpic_data.h
(+127 files in other folders)
